<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_erpviet_transperent"
            android:tint="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="30dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@xml/bg_input_new"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!--android:background="@xml/bg_input_icon"-->
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="8dp"
                    android:src="@mipmap/ic_earth"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <vn.izisolution.views.ValidateEditText
                        android:id="@+id/company"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/bg_null"
                        android:gravity="center_vertical"
                        android:hint="@string/signin_hint_company"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingRight="8dp"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#e2e2e4"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:background="@xml/bg_input_new"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="8dp"
                    android:src="@mipmap/ic_login_user"
                    android:tint="@color/colorAccent" />

                <vn.izisolution.views.ValidateEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bg_null"
                    android:gravity="center_vertical"
                    android:hint="@string/signin_hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#e2e2e4"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:background="@xml/bg_input_new"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="8dp"
                    android:src="@mipmap/ic_lock"
                    android:tint="@color/colorAccent" />

                <vn.izisolution.views.ValidateEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bg_null"
                    android:gravity="center_vertical"
                    android:hint="@string/signin_hint_password"
                    android:maxLines="1"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#e2e2e4"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <vn.izisolution.views.FontTextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_onclick_login"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <vn.izisolution.views.FontTextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:text="@string/create_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_language" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white" />

    </LinearLayout>
</LinearLayout>